tests/baselines/reference/reachabilityChecks2.errors.txt
reachabilityChecks2.ts(4,1): error TS7027: Unreachable code detected.
reachabilityChecks2.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
reachabilityChecks2.ts(6,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== reachabilityChecks2.ts (3 errors) ====
    while (true) { }
    const enum E { X }
    
    module A4 {
    ~~~~~~~~~~~
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        while (true);
    ~~~~~~~~~~~~~~~~~
        module A {
    ~~~~~~~~~~~~~~
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            const enum E { X }
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    }
    ~
!!! error TS7027: Unreachable code detected.
    
    